<resources>
    <string name="app_name">Alura Viagens</string>
    <string name="baner_do_pacote">baner do pacote</string>
    <string name="imagem_do_pacote">imagem do pacote</string>
    <string name="especiais">Especiasi</string>
    <string name="pais">Brasil</string>
    <string name="preco_final">Preço final:</string>
    <string name="realizar_pagamento">Realizar Pagamento</string>
    <string name="pagamento_info_cabecalho">Digite as informações do cartão de crédito que você deseja utilizar para o pagamento</string>
    <string name="pagamento_info_valor">Valor da Compra:</string>
    <string name="pagamento_numero_cartao">Número do cartão</string>
    <string name="mm">MM</string>
    <string name="aa">AA</string>
    <string name="cvc">CVC</string>
    <string name="nome_no_cartao">Nome No Cartão</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="mascara_nome_no_cartao">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="descricao_banner_resumo_compra">banner com cor solida, laranja</string>
    <string name="resumo_compra_info_sucesso">Compra realizada com sucesso :)</string>
    <string name="parabens">Parabéns</string>
    <string name="descrica_imagem_pacote">Imagem da cidade do pacote</string>
    <string name="info_confira_rasultado">Confira o resultado da compra</string>


</resources>
