<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PagamentoActivity">

    <TextView
        android:id="@+id/pagamento_pacote_info_cabecalho"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/pagamento_info_cabecalho"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pagamento_pacote_info_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/pagamento_info_valor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_pacote_info_cabecalho" />

    <TextView
        android:id="@+id/pagamento_pacote_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/pagamento_pacote_info_valor"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_pacote_info_valor"
        tools:text="R$ 244,55" />

    <EditText
        android:id="@+id/pagamento_pacote_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/pagamento_numero_cartao"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/pagamento_pacote_preco"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_pacote_preco" />

    <EditText
        android:id="@+id/pagamento_pacote_mes_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/mm"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/pagamento_pacote_numero_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_pacote_numero_cartao" />

    <EditText
        android:id="@+id/pagamento_pacote_ano_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:hint="@string/aa"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/pagamento_pacote_mes_cartao"
        app:layout_constraintTop_toTopOf="@+id/pagamento_pacote_mes_cartao" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:drawableLeft="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/cvc"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/pagamento_pacote_ano_cartao"
        app:layout_constraintTop_toTopOf="@+id/pagamento_pacote_ano_cartao"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:digits="@string/mascara_nome_no_cartao"
        android:hint="@string/nome_no_cartao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/pagamento_pacote_mes_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_pacote_mes_cartao"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/finalizar_compra"
        android:textColor="@android:color/white"
        android:background="@drawable/botao_redondo_laranja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />


</android.support.constraint.ConstraintLayout>