<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resumo_compra_banner"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/descricao_banner_resumo_compra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/resumo_compra_parabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/parabens"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/resumo_compra_banner"
        app:layout_constraintEnd_toEndOf="@+id/resumo_compra_banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/resumo_compra_banner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resumo_compra_info_sucesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/resumo_compra_info_sucesso"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/resumo_compra_banner"
        app:layout_constraintEnd_toEndOf="@+id/resumo_compra_banner"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_banner"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_parabens"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resumo_pacote_info_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/info_confira_rasultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_banner" />

    <ImageView
        android:id="@+id/resumo_compra_pacote_imagem"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/descrica_imagem_pacote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_info_resultado"
        tools:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/resumo_compra_pacote_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_pacote_imagem"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/resumo_compra_pacote_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_pacote_local"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_pacote_local"
        tools:text="08/12 - 10/12 de 2018" />

    <TextView
        android:id="@+id/resumo_compra_pacote_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_pacote_data"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_pacote_data"
        tools:text="R$ 243,99" />

</android.support.constraint.ConstraintLayout>