<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ListaPacoteActivity">

    <ImageView
        android:id="@+id/lista_pacote_baner"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/baner_do_pacote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lista_pacote_especiais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/lista_pacote_baner"
        app:layout_constraintRight_toRightOf="@id/lista_pacote_baner"
        app:layout_constraintTop_toTopOf="@id/lista_pacote_baner"
        android:text="@string/especiais"
        tools:text="Especiais" />

    <TextView
        android:id="@+id/lista_pacote_pais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lista_pacote_especiais"
        app:layout_constraintTop_toBottomOf="@+id/lista_pacote_especiais"
        android:text="@string/pais"
        tools:text="Brasil" />

    <ListView
        android:id="@+id/lista_pacote_pacotes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lista_pacote_baner"
        tools:listitem="@layout/item_pacote"/>



</android.support.constraint.ConstraintLayout>